[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/penguin.gd" type="Script" id=1]
[ext_resource path="res://textures/pShadow.png" type="Texture" id=2]
[ext_resource path="res://textures/peng_anim.png" type="Texture" id=3]
[ext_resource path="res://textures/cloud_ui_dot.png" type="Texture" id=4]
[ext_resource path="res://sounds/yahoo.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 24.9214
height = 66.0634

[sub_resource type="Animation" id=2]

resource_name = "move"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("peng_anim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="penguin" type="RigidBody2D" index="0" groups=[
"peng",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.5
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.7
angular_velocity = 0.0
angular_damp = 0.7
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform" ]

[node name="pShadow" type="Sprite" parent="." index="0"]

self_modulate = Color( 1, 1, 1, 0.486157 )
position = Vector2( 1.48863, 6.50698e-08 )
rotation = 1.5708
scale = Vector2( 0.384448, 0.574138 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="peng_anim" type="Sprite" parent="." index="1"]

rotation = 1.5708
scale = Vector2( 0.589615, 0.589615 )
texture = ExtResource( 3 )
hframes = 10
frame = 9
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
position = Vector2( 6, 2.62268e-07 )
rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="cloud_ui_dot" type="Sprite" parent="." index="3"]

self_modulate = Color( 1, 1, 1, 0.86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="yahoo" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="anim" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "move"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 5.0
anims/move = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="anim_timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="sleeping_state_changed" from="." to="." method="_on_penguin_sleeping_state_changed"]

[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]


